--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "require": {
         "php": "~7.0.0",
         "magento/framework": "100.*|101.*",
-        "magento/module-admin-notification": "100.*|101.*",
+        "magento/module-admin-notification": "100.*|101.*"
     },
     "type": "magento2-module",
     "version": "1.0.1",
